fix: card colors on dark mode

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,11 @@
   }
 
   .api-card-content {
-    background-color: #222222 !important;
+    background-color: #000 !important;
+  }
+
+  .api-card:hover .api-card-content {
+    background-color: var(--blue-500) !important;
   }
 
   .api-modal {
